--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.2
-loader_version=0.14.21
+minecraft_version=1.19
+yarn_mappings=1.19+build.4
+loader_version=0.14.8
 # Mod Properties
-mod_version=1.0.10
+mod_version=1.0.8-tavern
 maven_group=ru.ruscalworld
 archives_base_name=fabricexporter
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.83.1+1.20.1
+fabric_version=0.57.0+1.19
 prometheus_version=0.16.0
